Change QR in About page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -10,9 +10,8 @@
   <h1> This project does real-time recognition of different animal activities via Machine Learning technologies.
     That gives new opportunities for researchers and allows everybody who loves animals better understands how they are spent time.
   </h1>
-  <p><img src="/static/images/qr_test.png" alt="github qr :(" height="250" width="250"></p>
+  <p><img src="/static/images/QR_TRUE.png" alt="github qr :(" height="250" width="250"></p>
 </div>
 </center>
 
 {% endblock %}
-
